Add logo and favicon to mkdocs configuration

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,8 @@ repo_name: BoyceLab/DataSharingInABox
 
 theme:
   name: material
+  logo: assets/img/IMG_7932.png
+  favicon: assets/img/IMG_7932.png  # Optional, uses same image for favicon
   font:
     text: EB Garamond
   features:
@@ -13,7 +15,7 @@ theme:
     - search.suggest
     - search.highlight
     - content.code.copy
-
+  
 nav:
   - Home: index.md
   - How to Customize This Template: customization.md
