--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,7 +19,10 @@ theme:
 nav:
   - Home: index.md
   - How to Customize This Template: customization.md
-  - Information for Researchers: researchers.md 
+  - Information for Researchers:
+      - Overview: researchers.md
+      - End User Survey: survey.md
+      - Sharing Platforms & Technologies: data-platforms.md
   - Data Use Agreement: dua.md
   - Data Dictionary: data-dictionary.md
   - Derived Fields: derived-fields.md
