--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,14 +21,14 @@ nav:
   - How to Customize This Template: customization.md
   - Information for Researchers:
       - Overview: researchers.md
+      - Cohort Overview: cohort-overview.md
       - Data Use Agreement: dua.md
       - End User Survey: survey.md
       - Sharing Platforms & Technologies: data-platforms.md
-  - Data Dictionary: data-dictionary.md
-  - Derived Fields: derived-fields.md
+      - FAQ: faq.md
+      - Data Dictionary: data-dictionary.md
+      - Derived Fields: derived-fields.md
   - IRB Documentation: irb.md
-  - FAQ: faq.md
-  - Acknowledgements: acknowledgements.md
   - Key Resources:
       - Your Organization(s) Here: key_resources.md
       - NIH Data Sharing Language Explained: nih-data-sharing.md
@@ -37,7 +37,7 @@ nav:
       - NIH Sharing Policies: https://grants.nih.gov/policy-and-compliance/policy-topics/sharing-policies
       - FDA on Real-World Evidence: https://www.fda.gov/science-research/science-and-research-special-topics/real-world-evidence
       - EMA on Real-World Evidence: https://www.ema.europa.eu/en/about-us/how-we-work/data-regulation-big-data-other-sources/real-world-evidence
-
+      - Acknowledgements: acknowledgements.md
 markdown_extensions:
   - meta
   - admonition
