--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # ✅ use a stable version
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -16,11 +16,10 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'  # ✅ use a supported version
+          python-version: '3.10'
 
       - name: Install dependencies
-        run: |
-          pip install mkdocs-material
+        run: pip install -r requirements.txt  # 👈 use the requirements file
 
       - name: Deploy to GitHub Pages
         run: mkdocs gh-deploy --force
