--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,7 @@ nav:
       - Derived Fields: derived-fields.md
       - IRB Documentation: irb.md
   - Data Sharing Readiness: data-readiness.md
+  - Sharing with Industry: industry.md
   - External Repositories:  external-repository.md
   - Key Resources:
       - Your Organization(s) Here: key_resources.md
